erDiagram
    POSITION ||--|| TRAJECTORY : "1 к 1"
    TRAJECTORY ||--o{ PRE_ONBOARDING_ITEM : "материалы о компании"
    TRAJECTORY ||--o{ BLOCK : "по порядку"
    BLOCK ||--o{ LESSON : "только regular-блоки"
    LESSON ||--o{ MATERIAL : "общий или свой на каждой точке"
    LESSON ||--o{ TEST : "общий или свой на каждой точке"
    LESSON ||--o{ LESSON_LOCATION : "если урок есть не везде"
    LOCATION ||--o{ LESSON_LOCATION : ""
    BLOCK ||--o| TEST : "если kind = attestation"
    TEST ||--o{ QUESTION : "вопросы, один верный вариант"
    POSITION {
      uuid id
      string name
    }
    LOCATION {
      uuid id
      string name
      string city
      bool is_active
    }
    TRAJECTORY {
      uuid id
      enum status "draft active"
    }
    BLOCK {
      uuid id
      int order
      enum kind "regular attestation"
    }
    LESSON {
      uuid id
      int order
      string title
      bool everywhere "есть на всех точках"
      bool content_per_location "содержимое своё у каждой"
    }
    MATERIAL {
      uuid id
      string location_id "* = общий на сеть"
    }
    TEST {
      uuid id
      string location_id "* = общий на сеть"
      int pass_mark_pct
    }
    QUESTION {
      uuid id
      string text
      json options
      int correct_option_index
    }
